[package]
name = "esp01-test"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.6.3"
arrayvec = { version = "0.5.1", default-features = false }
rtt-target = { version =  "0.2.2", features = ["cortex-m"] }
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f411"] }
cortex-m-rtic = "0.5.5"
embedded-hal = "0.2.4"
